manifests/tsukutter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tsukutter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: tsukutter
  name: tsukutter
  namespace: tsukutter
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tsukutter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: tsukutter
    spec:
      containers:
      - image: kinadu/tsukutter
        imagePullPolicy: Always
        name: tsukutter
        volumeMounts:
        - mountPath: /app/db
          name: data
      - image: kinadu/tsukutter
        imagePullPolicy: Always
        name: tsukutter-bat
        command: ["/app/bat/chk.sh"]
        volumeMounts:
        - mountPath: /app/db
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nfs-claim-tsukutter
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: tsukutter
  name: tsukutter
  namespace: tsukutter
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: tsukutter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tsukutter
  namespace: tsukutter
spec:
  rules:
  - host: tsukutter.inajob.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: tsukutter
          servicePort: 80
